; ModuleID = '/home/carl/AnghaBench/FFmpeg/tests/checkasm/extr_huffyuvdsp.c_checkasm_check_huffyuvdsp.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tests/checkasm/extr_huffyuvdsp.c_checkasm_check_huffyuvdsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_PIX_FMT_YUV422P = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"add_int16_rnd_width\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"add_int16_128\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @checkasm_check_huffyuvdsp() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @rnd()
  %4 = call i32 @av_clip(i32 %3, i32 16, i32 128)
  %5 = mul nsw i32 16, %4
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* @AV_PIX_FMT_YUV422P, align 4
  %7 = call i32 @ff_huffyuvdsp_init(i32* %1, i32 %6)
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @check_add_int16(i32 %8, i32 65535, i32 %9, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @report(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @check_add_int16(i32 %12, i32 65535, i32 2048, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %14 = call i32 @report(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @av_clip(i32, i32, i32) #1

declare dso_local i32 @rnd(...) #1

declare dso_local i32 @ff_huffyuvdsp_init(i32*, i32) #1

declare dso_local i32 @check_add_int16(i32, i32, i32, i8*) #1

declare dso_local i32 @report(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
